--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,15 +1,24 @@
-/*
-Application Settings Go Here
-------------------------------------
-This file acts as a bundler for all variables/mixins/themes, so they
-can easily be swapped out without `core.scss` ever having to know.
+// Some best-practice CSS that's useful for most apps
+// Just remove them if they're not what you want
+html {
+  box-sizing: border-box;
+}
 
-For example:
+html,
+body {
+  font-size: 1rem;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 
-@import './variables/colors';
-@import './variables/components';
-@import './themes/default';
-*/
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
- // @import './settings';
-// @import 'foundation';
+
+.center {
+  text-align: center;
+}
