--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -3,16 +3,16 @@
 Grids
 */
 
-section {
+.container {
+    margin: 0 auto;
+    width: 100%;
+}
+
+section,
+nav,
+header,
+main {
     lost-utility: clearfix;
-    lost-center: 980px;
-}
-
-container {
-
-}
-
-header {
     lost-center: 980px;
 }
 
@@ -27,12 +27,16 @@ main {
 @media screen and (min-width: 40em) {
 
     .grid-3 {
-            lost-column: 1/3;
+        lost-column: 1/3;
     }
 
     .grid-2 {
-        lost-column: 1/2;
+        lost-column: 1/2 2 0.5rem;
     }
+}
+
+.grid-1-all {
+    lost-column: 1/1;
 }
 
 .grid-2-all {
