Add progress bar

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -3,13 +3,7 @@
     margin: 10px auto;
     padding: 16px;
     background: #F7F7F7;
-    lost-center: 550px;
 }
-
-.form-row {
-    lost-utility: clearfix;
-}
- 
 
 .form h1{
     background: #ccc;
@@ -30,20 +24,20 @@
 .form input[type="url"],
 .form textarea,
 .form select,
-.form input
+.form input,
 {
-    font-size: 1.2rem;
     transition: all 0.30s ease-in-out;
     outline: none;
     box-sizing: border-box;
     width: 100%;
-    height: 3rem;
+    height: 3.5rem;
     background: #fff;
     margin-bottom: 0.5rem;
     border: 1px solid #ccc;
     padding: 1rem;
     color: #555;
     font: 95% Arial, Helvetica, sans-serif;
+    border-radius: 2px;
 
     & ~span.error {
         display: none;
@@ -65,26 +59,31 @@
     
 }
 
-.form input[type="text"]:focus,
-.form input[type="date"]:focus,
-.form input[type="datetime"]:focus,
-.form input[type="email"]:focus,
-.form input[type="number"]:focus,
-.form input[type="search"]:focus,
-.form input[type="time"]:focus,
-.form input[type="url"]:focus,
-.form textarea:focus,
-.form select:focus
+.form input[type="text"],
+.form input[type="date"],
+.form input[type="datetime"],
+.form input[type="email"],
+.form input[type="number"],
+.form input[type="search"],
+.form input[type="time"],
+.form input[type="url"],
+.form textarea,
+.form select
 {
-    box-shadow: 0 0 5px #ccc;
-    padding: 1rem;
-    border: 1px solid #ccc;
+    font-size: 1.1rem;
+
+    &:focus {
+        box-shadow: 0 0 5px #ccc;
+        padding: 1rem;
+        border: 1px solid #ccc;
+    }
 }
 
 .form input[type="submit"],
 .form input[type="button"],
 button {
     box-sizing: border-box;
+    white-space: normal;
     width: 100%;
     padding: 1rem;
     background: #2B954C;
