--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -3,15 +3,22 @@
 Grids
 */
 
+@lost flexbox flex;
+
 .container {
     margin: 0 auto;
     width: 100%;
+
+}
+
+.form-row {
+    lost-center: 30em;
 }
 
 section,
 nav,
 header,
-main {
+main {  
     lost-utility: clearfix;
     lost-center: 980px;
 }
@@ -36,13 +43,13 @@ main {
 }
 
 .grid-1-all {
-    lost-column: 1/1;
+    lost-column: 1/1 flex;
 }
 
 .grid-2-all {
-        lost-column: 1/2;
+        lost-column: 1/2 flex;
     }
 
 .grid-3-all {
-        lost-column: 1/3;
+        lost-column: 1/3 flex;
     }
