--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -2,11 +2,9 @@
     font: Arial, Helvetica, sans-serif;
     margin: 10px auto;
     padding: 16px;
-    background: #F7F7F7;
 }
 
 .form h1{
-    background: #ccc;
     padding: 20px 0;
     font-size: 140%;
     font-weight: 300;
@@ -45,12 +43,12 @@
 
     &.error  {
         background:#F7F7F7; 
-        border-color: #ff6800;
-        border-width: 0.1rem;
+        border-color: #cc0000;
+        border-width: 0.2rem;
 
         & ~ span.error {
             display: block;
-            color: #ff6800;
+            color: #cc0000;
             padding: 0.5rem;
             margin-top: -0.5rem;
             margin-bottom: 0.5rem;
@@ -93,7 +91,7 @@ button {
     color: #fff;
     text-transform: uppercase;
 
-    &[disabled] {
+    &.disabled {
         cursor: not-allowed;
         background: #ccc;
         border: 0;
@@ -112,9 +110,34 @@ button:hover:not[disabled] {
     cursor:pointer
 }
 
+a.button {
+    display: block;
+    margin: 1rem 0 1.25rem;
+    position: relative;
+    text-decoration: none;
+    text-align: center;
+    background-color: #2b954c;
+    border: 0 solid #278644;
+    color: #fff;
+    transition: background-color .3s ease-out;
+    text-transform: uppercase;
+    padding: 1.125rem 2.25rem 1.1875rem;
+    font-size: 1.1rem;
+    border-radius: 5px;
+
+    &:hover {
+       background-color: #2b954c; 
+    }
+
+    &.disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+    }
+}
+
 label{
     padding: 0.5rem;
-    margin: 0px 0px 15px 0px;
+    margin: 0px 0px 5px 0px;
     
     .optional {
         color:#999999;
@@ -127,7 +150,7 @@ label{
 }
 
 .required {
-    background: #eaeaea;
+    background: #ebebe7;
 }
 
 label > span {
@@ -137,6 +160,9 @@ label > span {
 
 
 .radio {
+    
+    margin-bottom: 1rem;
+
     ul {
         list-style:none;
         padding-left:0;
@@ -174,7 +200,7 @@ label > span {
         border-radius: 100%;
         height: 30px;
         width: 30px;
-        top: 10px;
+        top: 0px;
         left: 5px;
         z-index: 5;
         transition: border .25s linear;
@@ -234,4 +260,10 @@ label > span {
   40%, 60% {
     transform: translate3d(4px, 0, 0);
   }
+}
+
+@keyframes activate {
+    50% {
+        transform: tra
+    }
 }
