--- a/src/layouts/styles/_base.scss
+++ b/src/layouts/styles/_base.scss
@@ -1,5 +1,10 @@
 // Some best-practice CSS that's useful for most apps
 // Just remove them if they're not what you want
+
+.app-container {
+  position: relative;
+}
+
 html {
   box-sizing: border-box;
 }
