--- a/src/routes/User/components/User.scss
+++ b/src/routes/User/components/User.scss
@@ -1,6 +1,5 @@
-
-
-fieldset {
+#css-root {
+    fieldset {
     margin-top: 1.5rem;
     margin-bottom: 1rem;
 }
@@ -32,3 +31,5 @@ label > span {
     }
 
 }
+}
+
