--- a/src/layouts/styles/_fonts.scss
+++ b/src/layouts/styles/_fonts.scss
@@ -1,10 +1,35 @@
 
-@font-face {
-  font-family: 'Clear Sans';
-  src: url('./fonts/clearsans/EOT/ClearSans-Bold.eot');
-  src: url('./fonts/clearsans/EOT/ClearSans-Bold.eot?#iefix') format('embedded-opentype'),
-       url('./fonts/clearsans/WOFF/ClearSans-Bold.woff') format('woff'),
-       url('./fonts/clearsans/TTF/ClearSans-Bold.ttf') format('truetype'),
-       url('./fonts/clearsans/SVG/ClearSans-Bold.svg') format('svg');
-  font-weight: bold;
-}
+  #css-root {
+    @font-face {
+      font-family: 'Clear Sans';
+      src: url('https://secure.worldvision.at/sites/worldvision.at/themes/worldvision_new/fonts/clearsans/EOT/ClearSans-Bold.eot');
+      src: url('https://secure.worldvision.at/sites/worldvision.at/themes/worldvision_new/fonts/clearsans/EOT/ClearSans-Bold.eot?#iefix') format('embedded-opentype'),
+          url('https://secure.worldvision.at/sites/worldvision.at/themes/worldvision_new/fonts/clearsans/WOFF/ClearSans-Bold.woff') format('woff'),
+          url('https://secure.worldvision.at/sites/worldvision.at/themes/worldvision_new/fonts/clearsans/TTF/ClearSans-Bold.ttf') format('truetype'),
+          url('https://secure.worldvision.at/sites/worldvision.at/themes/worldvision_new/fonts/clearsans/SVG/ClearSans-Bold.svg') format('svg');
+      font-weight: bold;
+    }
+
+    h1, h2, h3, h4, h5, h6, p {
+      font-family: Arial, Helvetica, sans-serif;
+      display:block;
+      margin: 0.6rem 0;
+    }
+
+    h1 {
+      font-size: 2.2rem;
+    }
+    h2 {
+      font-size: 1.8rem;
+    }
+    h3 {
+      font-size: 1.4rem;
+    }
+    h4 {
+      font-size: 1.1rem;
+    }
+
+
+  }
+  
+  
