--- a/src/layouts/styles/_forms.scss
+++ b/src/layouts/styles/_forms.scss
@@ -1,278 +1,280 @@
-.form{
+#css-root {
+
+    .form{
     font: Arial, Helvetica, sans-serif;
     margin: 10px auto;
-    padding: 0.5rem;
-}
-
-.form-row {
-    .grid-12-3 {
-        lost-column: 3/12 3 2px flex;
-    }
-    .grid-12-5 {
-        lost-column: 5/12 3 2px flex;
-    }
-    .grid-12-4 {
-        lost-column: 4/12 3 2px flex;
-    }
-    .grid-12-7 {
-        lost-column: 7/12 3 2px flex;
-    }
-    .grid-12-6 {
-        lost-column: 6/12 3 2px flex;
-    }
-    .grid-12-8 {
-        lost-column: 8/12 3 2px flex;
-    }
-    .grid-12-4 {
-        lost-column: 4/12 3 2px flex;
-    }
-}
-
-.form h1{
-    padding: 20px 0;
-    font-size: 140%;
-    font-weight: 300;
-    text-align: center;
-    color: #fff;
-    margin: -16px -16px 16px -16px;
-}
-.form input[type="text"],
-.form input[type="date"],
-.form input[type="datetime"],
-.form input[type="email"],
-.form input[type="number"],
-.form input[type="search"],
-.form input[type="time"],
-.form input[type="url"],
-.form textarea,
-.form select,
-.form input,
-{
-    transition: all 0.30s ease-in-out;
-    outline: none;
-    box-sizing: border-box;
-    width: 100%;
-    height: 3.5rem;
-    background: #fff;
-    margin-bottom: 0.5rem;
-    border: 1px solid #ccc;
-    padding: 0.5rem;
-    color: #555;
-    font: 95% Arial, Helvetica, sans-serif;
-    border-radius: 2px;
-
-    & ~span.error {
-        display: none;
+    padding: 0.8rem;
     }
 
-    &.error  {
-        background:#F7F7F7; 
-        border-color: #cc0000;
-        border-width: 0.2rem;
-
-        & ~ span.error {
-            display: block;
-            color: #cc0000;
-            padding: 0.5rem;
-            margin-top: -0.5rem;
-            margin-bottom: 0.5rem;
-            }
-    }
-
-}
-
-label, div.required {
-    span {
-        color: #999999;
-    }
-    input {
-        border: 1px solid #ccc !important;
-    }
-    &.required {
-        span {
-            color: #333;
+    .form-row {
+        .grid-12-3 {
+            lost-column: 3/12 3 8px ;
         }
-
-        input, select {
-            border: 5px solid #ccc !important;
+        .grid-12-5 {
+            lost-column: 5/12 3 8px ;
+        }
+        .grid-12-4 {
+            lost-column: 4/12 3 8px ;
+        }
+        .grid-12-7 {
+            lost-column: 7/12 3 8px ;
+        }
+        .grid-12-6 {
+            lost-column: 6/12 3 8px ;
+        }
+        .grid-12-8 {
+            lost-column: 8/12 3 8px ;
+        }
+        .grid-12-4 {
+            lost-column: 4/12 3 8px ;
         }
     }
-}
 
-.form input[type="text"],
-.form input[type="date"],
-.form input[type="datetime"],
-.form input[type="email"],
-.form input[type="number"],
-.form input[type="search"],
-.form input[type="time"],
-.form input[type="url"],
-.form textarea,
-.form select
-{
-    font-size: 1.1rem;
-    border-radius: 0px;
-
-    &:focus {
-        box-shadow: 0 0 5px #ccc;
-        padding: 0.5rem;
+    .form h1{
+        padding: 20px 0;
+        font-size: 140%;
+        font-weight: 300;
+        text-align: center;
+        color: #fff;
+        margin: -16px -16px 16px -16px;
+    }
+    .form input[type="text"],
+    .form input[type="date"],
+    .form input[type="datetime"],
+    .form input[type="email"],
+    .form input[type="number"],
+    .form input[type="search"],
+    .form input[type="time"],
+    .form input[type="url"],
+    .form textarea,
+    .form select,
+    .form input,
+    {
+        transition: all 0.30s ease-in-out;
+        outline: none;
+        box-sizing: border-box;
+        width: 100%;
+        height: 3.5rem;
+        background: #fff;
+        margin-bottom: 0.8rem;
         border: 1px solid #ccc;
-    }
-}
+        padding: 0.8rem;
+        color: #555;
+        font: 95% Arial, Helvetica, sans-serif;
+        border-radius: 0;
 
-.form input[type="submit"],
-.form input[type="button"],
-button, .button {
-    box-sizing: border-box;
-    border-radius: 5px;
-    white-space: normal;
-    width: 100%;
-    max-width: 40rem;
-    padding: 1.2rem;
-    margin-top: 1rem;
-    background: #2B954C;
-    border-style: none;   
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    cursor: pointer;
+        & ~span.error {
+            display: none;
+        }
 
-    &.disabled {
-        cursor: not-allowed;
-        background: #ccc;
-        border: 0;
+        &.error  {
+            background:#F7F7F7; 
+            border-color: #cc0000;
+            border-width: 0.2rem;
+
+            & ~ span.error {
+                display: block;
+                color: #cc0000;
+                padding: 0.8rem;
+                margin-top: -0.5rem;
+                margin-bottom: 0.5rem;
+                }
+        }
     }
 
-    img {
-        width: 2rem;
-        float: left;
-    }
-}
+    label, div.required {
+        span {
+            color: #999999;
+        }
+        input {
+            border: 1px solid #ccc !important;
+        }
+        &.required {
+            span {
+                color: #333;
+            }
 
-.form input[type="submit"]:hover,
-.form input[type="button"]:hover,
-button:hover:not[disabled] {
-    background: #2B954C;
-    cursor:pointer
-}
-
-a.button {
-    background-color: #2b954c;
-    border: 0 solid #278644;
-    color: #fff;
-    transform: perspective(1px) translateZ(0);
-
-    &:hover {
-       background-color: #2b954c; 
+            input, select {
+                border: 5px solid #ccc !important;
+            }
+        }
     }
 
-    &.disabled {
-        background-color: #ccc;
-        cursor: not-allowed;
+    .form input[type="text"],
+    .form input[type="date"],
+    .form input[type="datetime"],
+    .form input[type="email"],
+    .form input[type="number"],
+    .form input[type="search"],
+    .form input[type="time"],
+    .form input[type="url"],
+    .form textarea,
+    .form select
+    {
+        font-size: 1.1rem;
+        border-radius: 0px;
+
+        &:focus {
+            box-shadow: 0 0 5px #ccc;
+            padding: 0.8rem;
+            border: 1px solid #ccc;
+        }
     }
-}
 
-label, .label{
-    border-radius: 5px;
-    padding: 0.5rem 0.5rem 0 0.5rem;
-    margin: 0px 0px 5px 0px;
-    
-    .optional {
-        color:#999999;
+    .form input[type="submit"],
+    .form input[type="button"],
+    button, .button {
+        box-sizing: border-box;
+        border-radius: 0;
+        white-space: normal;
+        width: 100%;
+        max-width: 40rem;
+        padding: 1.2rem;
+        margin-top: 1rem;
+        background: #2B954C;
+        border-style: none;   
+        color: #fff;
+        font-size: 1.2rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        cursor: pointer;
+
+        &.disabled {
+            cursor: not-allowed;
+            background: #ccc;
+            border: 0;
+        }
+
+        img {
+            width: 2rem;
+            float: left;
+        }
     }
 
-    p {
-        padding: 0;
-        margin: 0;
+    .form input[type="submit"]:hover,
+    .form input[type="button"]:hover,
+    button:hover:not[disabled] {
+        background: #2B954C;
+        cursor:pointer
     }
-}
 
-label > span {
-    font-family: 'Clear Sans', sans-serif;
-    text-transform: uppercase;
-    margin-bottom: 0.5rem;
-    width: 100%;
-}
+    a.button {
+        background-color: #2b954c;
+        border: 0 solid #278644;
+        color: #fff;
+        transform: perspective(1px) translateZ(0);
 
+        &:hover {
+        background-color: #2b954c; 
+        }
 
-.radio {
-    
-    ul {
-        list-style:none;
-        padding-left:0;
+        &.disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
     }
-    ul li{
-        display: block;
-        position: relative;
-        float: left;
+
+    label, .label{
+        border-radius: 0px;
+        
+        margin: 0px 0px 5px 0px;
+        
+        .optional {
+            color:#999999;
+        }
+
+        p {
+            padding: 0;
+            margin: 0;
+        }
+    }
+
+    label > span {
+        font-family: 'Clear Sans', sans-serif;
+        text-transform: uppercase;
+        margin-bottom: 0.5rem;
         width: 100%;
     }
 
-    ul li input[type=radio]{
-        position: absolute;
-        visibility: hidden;
+    .radio {
+        
+        ul {
+            list-style:none;
+            padding-left:0;
+        }
+        ul li{
+            display: block;
+            position: relative;
+            float: left;
+            width: 100%;
+        }
+
+        ul li input[type=radio]{
+            position: absolute;
+            visibility: hidden;
+        }
+
+        ul li label{
+            display: block;
+            position: relative;
+            padding: 0px 25px 0px 50px;
+            margin: 10px auto;
+            z-index: 9;
+            cursor: pointer;
+            transition: all 0.25s linear;
+        }
+
+        ul li .check{
+            display: block;
+            position: absolute;
+            border: 5px solid #ccc;
+            border-radius: 100%;
+            height: 30px;
+            width: 30px;
+            top: 0px;
+            left: 5px;
+            z-index: 5;
+            transition: border .25s linear;
+        }
+
+        ul li:hover .check {
+            border: 5px solid #2B954C;
+        }
+
+        ul li .check::before {
+            display: block;
+            position: absolute;
+            content: '';
+            border-radius: 100%;
+            height: 16px;
+            width: 16px;
+            top: 2px;
+            left: 2px;
+            margin: auto;
+            transition: background 0.25s linear;
+        }
+
+        input[type=radio]:checked ~ .check {
+            border: 5px solid #2B954C;
+        }
+
+        input[type=radio]:checked ~ .check::before{
+            background: #2B954C;
+        }
+
+        input[type=radio]:hover ~ label{
+            color: #2B954C;
+        }
     }
 
-    ul li label{
-        display: block;
-        position: relative;
-        padding: 0px 25px 0px 50px;
-        margin: 10px auto;
-        z-index: 9;
-        cursor: pointer;
-        transition: all 0.25s linear;
+    .error,
+    .warning {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
     }
 
-    ul li .check{
-        display: block;
-        position: absolute;
-        border: 5px solid #ccc;
-        border-radius: 100%;
-        height: 30px;
-        width: 30px;
-        top: 0px;
-        left: 5px;
-        z-index: 5;
-        transition: border .25s linear;
-    }
-
-    ul li:hover .check {
-        border: 5px solid #2B954C;
-    }
-
-    ul li .check::before {
-        display: block;
-        position: absolute;
-        content: '';
-        border-radius: 100%;
-        height: 16px;
-        width: 16px;
-        top: 2px;
-        left: 2px;
-        margin: auto;
-        transition: background 0.25s linear;
-    }
-
-    input[type=radio]:checked ~ .check {
-        border: 5px solid #2B954C;
-    }
-
-    input[type=radio]:checked ~ .check::before{
-        background: #2B954C;
-    }
-
-    input[type=radio]:hover ~ label{
-        color: #2B954C;
-    }
-}
-
-.error,
-.warning {
-  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
-  transform: translate3d(0, 0, 0);
-  backface-visibility: hidden;
-  perspective: 1000px;
 }
 
 
