--- a/src/layouts/styles/_grid.scss
+++ b/src/layouts/styles/_grid.scss
@@ -3,7 +3,8 @@
 Grids
 */
 
-@lost flexbox flex;
+#css-root {
+    position: relative;
 
 .container {
     margin: 0 auto;
@@ -43,7 +44,7 @@ section {
 
 aside {
     lost-column: 5/13;
-    padding: 1rem;
+    padding-top: 1rem;
 }
 
 @media screen and (max-width: 40em) {
@@ -90,13 +91,16 @@ div {
 }
 
 .grid-1-all {
-    lost-column: 1/1 flex;
+    lost-column: 1/1;
 }
 
 .grid-2-all {
-        lost-column: 1/2 flex;
+        lost-column: 1/2;
     }
 
 .grid-3-all {
-        lost-column: 1/3 flex;
+        lost-column: 1/3;
     }
+
+
+}
