--- a/src/routes/User/userElements/TaxReceipt/components/TaxReceipt.scss
+++ b/src/routes/User/userElements/TaxReceipt/components/TaxReceipt.scss
@@ -8,6 +8,16 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
 
+  p.right {
+      text-align: right;
+  }
+
+  img.right {
+      text-align: right;
+  }
+
+
+
   .sender {
       color: #8B8B8B;
       font-size: 12px;
@@ -16,11 +26,16 @@
 }
 
 @media print {
+    body {
+        visibility: hidden;
+    }
+
     section {
-        lost-column: 1/1;
+        width: 100% !important;
     }
     .paper {
         width: 100%;
         box-shadow: none;
+        display: block !important;
     }
 }
