--- a/src/routes/components/Progress/progress.scss
+++ b/src/routes/components/Progress/progress.scss
@@ -1,4 +1,5 @@
-.progress {
+#css-root {
+    .progress {
     font-family: 'Clear Sans', sans-serif;
     width: 100%;
     padding: 0.5rem 0;
@@ -72,3 +73,6 @@
         }
     }
 }
+
+}
+
