--- a/src/layouts/styles/_fonts.scss
+++ b/src/layouts/styles/_fonts.scss
@@ -17,19 +17,40 @@
     }
 
     h1 {
-      font-size: 2.2rem;
+      font-size: 1.8rem;
+      line-height: 1.8rem;
     }
     h2 {
-      font-size: 1.8rem;
+      font-size: 1.4rem;
+      line-height: 1.8rem;
     }
     h3 {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
+      line-height: 1.8rem;
     }
     h4 {
-      font-size: 1.1rem;
+      font-size: 1rem;
+      line-height: 1.8rem;
     }
+  }
 
-
+  @media screen and (max-width: 40em) {
+    h1 {
+      font-size: 1.6rem;
+      line-height: 1.8rem;
+    }
+    h2 {
+      font-size: 1.2rem;
+      line-height: 1.8rem;
+    }
+    h3 {
+      font-size: 1rem;
+      line-height: 1.8rem;
+    }
+    h4 {
+      font-size: 1rem;
+      line-height: 1.8rem;
+    }
   }
   
   
