--- a/src/layouts/styles/_grid.scss
+++ b/src/layouts/styles/_grid.scss
@@ -6,85 +6,76 @@ Grids
 #css-root {
     position: relative;
 
-.container {
-    margin: 0 auto;
-    width: 100%;
-}
-
-@media screen and (max-width: 40em) {
     .container {
-        padding: 0.5rem;
+        margin: 0 auto;
+        width: 100%;
     }
-}
 
-.bg-primary-grey {
-    background-color: #ebebe7;
-    opacity: .99;
-}
+    .bg-primary-grey {
+        background-color: #ebebe7;
+        opacity: .99;
+    }
 
-.form-row {
-    lost-center: 550px;
-}
+    .form-row {
+        lost-center: 550px;
+    }
 
-section,
-nav,
-header,
-main {  
-    lost-utility: clearfix;
-    lost-center: 980px;
-}
+    section,
+    nav,
+    header,
+    main {  
+        lost-utility: clearfix;
+        lost-center: 980px;
+    }
 
-main {
-    lost-center: 980px;
-}
+    main {
+        lost-center: 980px;
+        padding: 1rem;
+    }
 
-section {
-    lost-column: 8/13;
-}
-
-aside {
-    lost-column: 5/13;
-    padding-top: 1rem;
-}
-
-@media screen and (max-width: 40em) {
     section {
-        lost-column: 1/1;
+        lost-column: 9/13;
     }
 
     aside {
+        lost-column: 4/13;
+        padding-top: 1rem;
+    }
+
+        .grid-3 {
+            lost-column: 1/3;
+        }
+
+        .grid-2 {
+            lost-column: 1/2 2 0.5rem;
+        }
+
+    .grid-1-all {
         lost-column: 1/1;
-        padding: 1rem;
-    }
-}
-
-
-
-
-
-
-@media screen and (min-width: 40em) {
-
-    .grid-3 {
-        lost-column: 1/3;
     }
 
-    .grid-2 {
-        lost-column: 1/2 2 0.5rem;
+    .grid-2-all {
+            lost-column: 1/2;
+        }
+
+    .grid-3-all {
+            lost-column: 1/3;
+        }
+
+    @media screen and (max-width: 40em) {
+        .container {
+            padding: 0.5rem;
+        }
+
+        section {
+            lost-column: 1/1;
+            padding: 0;
+        }
+
+        aside {
+            lost-column: 1/1;
+            padding: 0;
+        }
     }
-}
-
-.grid-1-all {
-    lost-column: 1/1;
-}
-
-.grid-2-all {
-        lost-column: 1/2;
-    }
-
-.grid-3-all {
-        lost-column: 1/3;
-    }
-
 
 }
