--- a/src/layouts/styles/_fonts.scss
+++ b/src/layouts/styles/_fonts.scss
@@ -35,6 +35,11 @@
   }
 
   @media screen and (max-width: 40em) {
+    p {
+      padding-left: 0;
+      padding-right: 0;
+      line-height: 1.4;
+    }
     h1 {
       font-size: 1.6rem;
       line-height: 1.8rem;
