Improve css for tax receipt print media

--- a/src/routes/User/userElements/TaxReceipt/components/TaxReceipt.scss
+++ b/src/routes/User/userElements/TaxReceipt/components/TaxReceipt.scss
@@ -37,25 +37,39 @@
             padding:1rem !important;
         }
     }
+}
 
-    @media print {
-        body, .toolbar, .header-container, .top-bar-line {
+@media print {
+        body, #toolbar, #header-container, #top-bar-line {
             visibility: hidden;
             padding: 0 !important;
             margin: 0 !important
         }
-        .toolbar, .header-container, .top-bar-line {
-            height: 0px;
+        #toolbar, #header-container, #footer-container, #top-bar-line {
+            display: none;
         }
-
 
         section {
             width: 100% !important;
+            padding: 0;
         }
         .paper {
             width: 100%;
-            box-shadow: none;
+            box-shadow: none !important;
             display: block !important;
+
+            p {
+                font-size: 14px;
+                line-height: 1rem;
+
+                &.sender {
+                    font-size: 12px;
+                }
+            }
+
+            h1, h2, h3, h4 {
+                font-weight: bold;
+            }
+        
         }
-    }
 }
