--- a/src/layouts/styles/_forms.scss
+++ b/src/layouts/styles/_forms.scss
@@ -73,8 +73,11 @@
 
             & ~ span.error {
                 display: block;
+                background:#FFFFFF; 
+                font-style: normal;
+                font-size: 0.9rem;
                 color: #cc0000;
-                padding: 0.8rem;
+                padding: 0.5rem 0.5rem 0.5rem 0;
                 margin-top: -0.5rem;
                 margin-bottom: 0.5rem;
                 }
